# bbqr-dart

./: .gitignore  .metadata  README.md  codegen.sh  compile.ios.sh  compile.native.sh  flutter_rust_bridge.yaml  justfile  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: release.config.txt
cargokit/build_tool/lib/src/: android_environment.dart
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: .gitignore  bbqr.podspec  bbqr_dart.podspec  dart_bbqr.podspec
ios/Classes/: frb_generated.h
lib/: bbqr.dart
lib/src/: root.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: error.dart  error.freezed.dart  types.dart  types.freezed.dart
lib/src/utils/: loader.dart
linux/: CMakeLists.txt
macos/: bbqr.podspec  bbqr_dart.podspec
macos/Classes/: frb_generated.h
rust/: .gitignore  Cargo.toml  Dockerfile  android.sh  compress.sh  copy.sh  darwin.sh  linux.sh  makefile  unit-test.sh
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: error.rs  mod.rs  types.rs
test/: bbqr_loop_back_test.dart
windows/: CMakeLists.txt
(+2 files in other folders)
