[package]
name = "bbqr_dart"
authors = [""]
version = "0.1.0"
edition = "2021"

[lib]
name = "bbqr"
doctest = false
crate-type = ["cdylib", "staticlib"] 

[dependencies]
bbqr = { git = "https://github.com/SatoshiPortal/bbqr-rust.git", rev = "2296a713beb58a175eb620a087f7da6826dc6f70", default-features = false }

# static link libz-sys
libz-sys = { version = "1.1", features = ["static"] }

flutter_rust_bridge = "=2.0.0-dev.31"
anyhow = "1.0.68"
serde = "1.0.89"
serde_json = "1.0.96"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.0.0-dev.31"  }

[build]
profiler = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
